Rhymes finder added

--- a/MvxPoet.Wpf/Views/WritePoemView.xaml
+++ b/MvxPoet.Wpf/Views/WritePoemView.xaml
@@ -33,37 +33,49 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
-        <Button x:Name="ReadButton" Grid.Column="1" Grid.Row="1" Margin="10" MinWidth="50" MaxWidth="50" Click="ReadButton_Click">Wczytaj</Button>
-        <Button mvx:Bi.nd="Command WriteToFileCommand" IsEnabled="{Binding CanWriteToFile}" Grid.Column="2" Grid.Row="1" Margin="10" MinWidth="50" MaxWidth="50" HorizontalAlignment="Left">Zapisz</Button>
+        <Button x:Name="ReadButton" Grid.Column="1" Grid.Row="1" Margin="10" MinWidth="70" MaxWidth="70" Click="ReadButton_Click">Wczytaj</Button>
+        <Button mvx:Bi.nd="Command WriteToFileCommand" IsEnabled="{Binding CanWriteToFile}" Grid.Column="2" Grid.Row="1" Margin="10" MinWidth="70" MaxWidth="70" HorizontalAlignment="Left">Zapisz</Button>
         <TextBlock Grid.Column="1" Grid.Row="2" Margin="10" MinWidth="50" TextAlignment="Right">Tytuł:</TextBlock>
         <TextBox x:Name="Title" Grid.Column="2" Grid.Row="2" Margin="10" Width="auto" Grid.ColumnSpan="3" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox x:Name="Text" Grid.Column="1" Grid.Row="3" Margin="10" MinWidth="400" MinHeight="580" Grid.ColumnSpan="4" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" AcceptsTab="True" TextBlock.LineHeight="20"/>
-        <ListView Grid.Column="5" Grid.Row="3"  Margin="10" MinWidth="100" ItemsSource="{Binding LinesEndings}">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Height" Value="21" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
-        <ListView Grid.Column="6" Grid.Row="3" Margin="10" MinWidth="20" ItemsSource="{Binding NumbersOfSyllables}">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Height" Value="21" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
-        <ListView Grid.Column="7" Grid.Row="3" Margin="10" MinWidth="20" ItemsSource="{Binding Rhymes}">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Height" Value="21" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+
+
+        <ScrollViewer Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" Height="580" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+            <StackPanel Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" Orientation="Horizontal">
+                
+                <TextBox x:Name="Text" Grid.Column="1" Grid.Row="3" Margin="10" Width="400" MinHeight="560" Grid.ColumnSpan="4" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" AcceptsTab="True" TextBlock.LineHeight="20" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
+                <ListView Grid.Column="5" Grid.Row="3"  Margin="10" Width="100" ItemsSource="{Binding LinesEndings}" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Height" Value="21" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+                <ListView Grid.Column="6" Grid.Row="3" Margin="10" MinWidth="20" ItemsSource="{Binding NumbersOfSyllables}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Height" Value="21" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+                <ListView Grid.Column="7" Grid.Row="3" Margin="10" MinWidth="20" ItemsSource="{Binding Rhymes}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Height" Value="21" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+                
+            </StackPanel>
+        </ScrollViewer>
+        
+        
 
         <TextBlock Grid.Column="8" Grid.Row="1" Margin="10" MinWidth="100" TextAlignment="Right">Znajdź rym do:</TextBlock>
         <TextBox Grid.Column="9" Grid.Row="1" Margin="10" Width="auto" Text="{Binding GivenWord, UpdateSourceTrigger=PropertyChanged}"/>
         <Button mvx:Bi.nd="Command SuggestRhymesCommand" IsEnabled="{Binding CanSuggestRhymes}" Grid.Column="9" Grid.Row="2" Margin="10" MinWidth="100">Szukaj rymów</Button>
 
-        <TextBlock Grid.Column="8" Grid.Row="3" Margin="10" MinWidth="100" MinHeight="580" Grid.ColumnSpan="2" Text="{Binding RhymeSuggestions}" LineHeight="20" TextWrapping="Wrap"/>
+        <ScrollViewer Grid.Column="8" Grid.Row="3" Margin="10" MinWidth="100" MinHeight="580" MaxWidth="300" MaxHeight="580" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+            <TextBlock Grid.Column="8" Grid.Row="3" Margin="10" MinWidth="100" MinHeight="580" Grid.ColumnSpan="2" Text="{Binding RhymeSuggestions}" LineHeight="20" TextWrapping="Wrap"/>
+        </ScrollViewer>
     </Grid>
 </views:MvxWpfView>
